# auto_qc

./: .gitignore  Untitled.ipynb  changelog.md  pyproject.toml  readme.md  scratch.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
auto_qc_queries/: all_runs_count.py  check_sample_qc_pass.py  fh_duplcation_metrics.txt  fh_duplication_metrics.py  fh_duplication_metrics.txt  fh_on_target_reads.py  list_TSC_all_female.py  wgs_coverage_metrics.py.save  wgs_samples_seq_dup.py
config/: config.yaml  config_gen01.yaml  config_local.yaml  config_webserver.yaml
deploy/: auto_cron  auto_cron.sh  backup.sh  fix_sample_sheets.sh
env/: environment.yml  main.yaml
mysite/: settings.py  urls.py
pipeline_monitoring/: pipelines.py  qstat_to_table.py  send_email.py
pipelines/: TSO500_pipeline.py  ctDNA_pipeline.py  dragen_pipelines.py  fusion_pipelines.py  germline_pipelines.py  nextflow_pipelines.py  parsers.py  quality_pipelines.py  relatedness2.py  somatic_pipelines.py
qc_analysis/: count_variants.ipynb  interop.ipynb  parsers.py
qc_analysis/pipeline_complete/: environment.yml  pipefail.py  pipeline_complete.py
qc_database/: admin.py  apps.py  authentication.py  forms.py  management_utils.py  models.py  serializers.py  urls.py  views.py
qc_database/fixtures/: test_data.json
qc_database/tests/: test_cnv_qc.py  test_pipelines.py  test_relatedness.py  tests.py
sample_sheet/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
sample_sheet_generator/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
(+252 files in other folders)
