[project]
name = "auto-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap4>=2025.6",
    "django==5.1.7",
    "django-auditlog==2",
    "django-crispy-forms>=2.4",
    "djangorestframework==3.16.0",
    "gunicorn==23",
    "httpie==3",
    "interop==1.4.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2>=2.9.10",
    "pysam>=0.23.3",
    "pyyaml>=6.0.2",
    "xmltodict>=0.14.2",
]
